legacy/kubernetes/local/phpmyadmin/deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: phpmyadmin

spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      name: phpmyadmin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: bitnami/phpmyadmin:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 3
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            port: 8080
            path: "/"
          initialDelaySeconds: 30
          timeoutSeconds: 3
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
